    - In some update, the command line arguments stopped working. They are fixed again.
    - Added the feature in the GUI to "install" DevScript. This will associate .dev files with the editor when double clicked (Windows only)
      Don't worry, this will just add a regestry key called [coming soon]
      The GUI also gives an option to "uninstall" e.g. remove the registry key
      
1.9.13:
	- The "import" command got very few love the last updates:
		- The class of the imported .jar file only has to extend the "Library" class and does not need to be named "CustomLibrary"
		  BUT that means I have to use a third party library :(
		- Relative paths (*/lib.jar for example) can either be: 
			The folder of a script file that is being executed 
			OR the folder of the script host, if no file is being loaded
	- The editor now looks a little more fancier with some additional options to rerun scripts or terminate a script without closing the window
	- Added some additional commands to resize the console window or to clean the window
		- gui.clear
		- gui.setSize [sizeX] [sizeY]
		- gui.fullscreen [$true/$false]
		(The command "clearConsole" is still available but will be removed in future releases by the "gui.clear" command)
	- Started to make some plans to implement a simple graphics library to control java awt elements ;)
	- Try statements can now have a catch block that executes when an error occured so you actually know when something went wrong!
	  Example:
	  try {
	  	awdawdsdaw;
	  } catch ex {
	  	println "The exception was: " $ex;
	  }
	- Added error handling tutorial/examples for try/catch stuff and more examples
	- Added a small welcome message for the GUI editor to prevent confusion
	
1.9.12:
	- DevScript can now property handle the null variable $null. (="undefined")
	- Added an explanation for the "wait" command
	- Added an overloaded command "push [value] [array] [index]" to insert values at a specified index into an array